CodeJB/log/err_2.txt
Info in <TUnixSystem::ACLiC>: creating shared library /home/smjoblan/iTHEPHY/iTHEPHY/CodeJB/./data_cc.so
In file included from input_line_11:6:
././data.cc:67:25: error: use of undeclared identifier 'thread'
  const auto nThreads = thread::hardware_concurrency();
                        ^
Error in <ACLiC>: Dictionary generation failed!
